--- a/.env.dev
+++ b/.env.dev
@@ -8,7 +8,7 @@ NODE_ENV=Development
 db and mongoDBOptions are used for database connection (mongoose.js file)
 ******************************/
 
-db=postgresql://postgres:indianic@localhost:27017/todoApp
+db=postgresql://USER_NAME:PASSWORD@HOST_NAME/DB_NAME
 
 /******************************
 Api listening port (server.js file)
